1999-03-15  Alex Lancaster  <alex@santafe.edu>

	* Makefile.in (install): Make $datadir, if it doesn't already
	exist.

1999-03-15  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: Use System.loadLibrary instead of 
	System.load 

1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in (all): Compile all the Java files at once.

	* Makefile.in (jdkdir): Substitute.

1999-03-11  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* SwarmEnvironment.java: New file.

1999-03-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (JAVAC, srcdir): Substitute
	(VPATH): Set to srcdir.
	(all): Depend on Selector.class and add to jar file.
	(%.class): New rule.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in (JAR): Substitute.
	(all): Use it instead of literal jar.

	* Makefile.rules.in (jdkdir): Substitute jdkdir instead of javaprefix.

1999-03-03  Alex Lancaster  <alex@santafe.edu>

	* Makefile.in (prefix): Extract.

1999-03-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.in: Substitute datadir and INSTALL.
	(all): Create swarm.jar.
	(install): New target.

1999-02-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.rules.in, Makefile.in: Start.
	
